# lisp-sitter

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/lisp-sitter/: Cargo.toml
crates/lisp-sitter-cl/: Cargo.toml
crates/lisp-sitter-cl/src/: lib.rs  plugin.rs  treesit.rs
crates/lisp-sitter-cl/tests/: explore.rs
crates/lisp-sitter-core/: Cargo.toml
crates/lisp-sitter-core/src/: anchors.rs  definers.rs  edit.rs  error.rs  fmt.rs  lib.rs  plugin.rs  position.rs  registry.rs  scan.rs  sexp_reader.rs  sexp_scan.rs  treesit_util.rs
crates/lisp-sitter-core/tests/: fuzz_scanner.rs
crates/lisp-sitter-elisp/: Cargo.toml
crates/lisp-sitter-elisp/src/: lib.rs  plugin.rs  treesit.rs
crates/lisp-sitter-scheme/: Cargo.toml
crates/lisp-sitter-scheme/src/: lib.rs  plugin.rs  treesit.rs
crates/lisp-sitter-scheme/tests/: explore.rs
crates/lisp-sitter/src/: analyze.rs  call_scan.rs  commands.rs  config.rs  eval.rs  graph.rs  lib.rs  main.rs  mcp.rs  ops.rs  registry.rs  transform.rs
crates/lisp-sitter/src/mcp/: install.rs  server.rs
crates/lisp-sitter/tests/: integration.rs
docs/: usage.md
editor/: lisp-sitter.el
