[workspace]
resolver = "2"
members = [
    "crates/lisp-sitter-core",
    "crates/lisp-sitter-elisp",
    "crates/lisp-sitter-cl",
    "crates/lisp-sitter-scheme",
    "crates/lisp-sitter",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Evgeniy Tyurkin <etyurkin@kwarks.org>"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
lisp-sitter-core = { path = "crates/lisp-sitter-core" }
lisp-sitter-elisp = { path = "crates/lisp-sitter-elisp" }
lisp-sitter-cl = { path = "crates/lisp-sitter-cl" }
lisp-sitter-scheme = { path = "crates/lisp-sitter-scheme" }
tree-sitter = "0.25"
tree-sitter-elisp = "1.6"
tree-sitter-commonlisp = "0.4"
tree-sitter-scheme = "0.24"
thiserror = "2"
rmcp = { version = "1.8", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["derive"] }
