[package]
name = "lisp-sitter-elisp"
description = "Emacs Lisp structural editing plugin for lisp-sitter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lisp-sitter-core = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-elisp = { workspace = true }

[dev-dependencies]
lisp-sitter-core = { workspace = true }
