[package]
name = "lisp-sitter"
description = "Structural editing CLI for Emacs Lisp, Scheme, and Common Lisp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "lisp-sitter"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
lisp-sitter-core = { workspace = true }
lisp-sitter-elisp = { workspace = true }
lisp-sitter-cl = { workspace = true }
lisp-sitter-scheme = { workspace = true }
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tree-sitter.workspace = true
tree-sitter-elisp.workspace = true
tree-sitter-commonlisp.workspace = true
tree-sitter-scheme.workspace = true
